--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #161616;
-    background: radial-gradient(#aaaaaa, #161616);
+    /*background-color: #161616;*/
+    background: radial-gradient(#323232, #161616);
 }
 
 .base {
