--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url(cursor.css);
+
 * {
     margin: 0;
     padding: 0;
@@ -15,7 +17,7 @@ body {
     align-items: center;
     justify-content: center;
     /*background-color: #161616;*/
-    background: radial-gradient(#323232, #161616);
+    background: radial-gradient(#323232, #161616 70%);
 }
 
 .base {
