--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(cursor.css);
+@import url(./cursor.css);
 
 * {
     margin: 0;
@@ -17,7 +17,7 @@ body {
     align-items: center;
     justify-content: center;
     /*background-color: #161616;*/
-    background: radial-gradient(#323232, #161616 70%);
+    background: radial-gradient(#404040, #161616 70%);
 }
 
 .base {
