--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    /*background-color: #161616;*/
-    background: radial-gradient(#404040, #161616 90%);
+    background-color: #161616;
 }
 
 .base {
