--- a/css/cursor.css
+++ b/css/cursor.css
@@ -14,6 +14,9 @@
   }
 
   .click {
-    border-color: red;
-    width: 18px;
+    background-color: rgba(255,255,255,.5);
+  }
+
+  .hover {
+    width: 20px;
   }
