--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,9 @@ body {
     font-size: 30px;
     color: whitesmoke
 }
+
+@media only screen and (max-width: 700px) {
+    body .cursor {
+        display: 'none'
+    }
+}
