--- a/css/cursor.css
+++ b/css/cursor.css
@@ -7,6 +7,7 @@
     border-style: solid;
     background-color: rgba(255,255,255,.1);
     position: fixed;
+    opacity: 0;
     transform: translate(-50%, -50%);
     pointer-events: none;
     transition: width .3s, height .3s, opacity .3s, border-color .3s;
