--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,23 @@ body {
     font-size: 30px;
     color: whitesmoke
 }
+
+.base:hover span:before {
+    animation: dots 2s linear infinite;
+    content: '';
+  }
+
+  @keyframes dots {
+    0%, 20% {
+      content: '.';
+    }
+    40% {
+      content: '..';
+    }
+    60% {
+      content: '...';
+    }
+    90%, 100% {
+      content: '';
+    }
+}
