--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,10 @@ body {
     50% {
       content: '.. ';
     }
-    100% {
+    75% {
       content: '...';
+    }
+    100% {
+      content: '   ';
     }
 }
