--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ body {
     width: 360px;
     font-family: 'Courier New', monospace;
     font-size: 30px;
+    white-space: nowrap;
     color: whitesmoke
 }
 
