--- a/Xeferis_Portfolio/assets/css/custom/main.css
+++ b/Xeferis_Portfolio/assets/css/custom/main.css
@@ -1,36 +1,9 @@
 :root {
   --bg_color: #161616;
-  --fg_color: whitesmoke;
-}
-
-* {
-    cursor: none;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-html {
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--bg_color);
+  --fg_color: #f5f5f5;
 }
 
 .base {
-    width: 360px;
-    font-family: 'Courier New', monospace;
-    font-size: 30px;
-    white-space: nowrap;
-    color: var(--fg_color);
-    background-color: transparent;
     transition-property: background-color, color;
     transition-duration: .5s;
 }
