--- a/assets/css/custom/cursor.css
+++ b/assets/css/custom/cursor.css
@@ -1,16 +1,13 @@
 .cursor{
-    width: 15px;
-    aspect-ratio: 1;
+    width: 1px;
+    height: 1px;
+    box-shadow: 0 0 200px 100px #d67129;
     border-radius: 100%;
-    border-color: white;
-    border-width: 1px;
-    border-style: solid;
-    background-color: rgba(255,255,255,.1);
     position: fixed;
     opacity: 0;
     transform: translate(-50%, -50%);
     pointer-events: none;
-    transition: width .3s, height .3s, opacity .3s, border-color .3s;
+    transition: box-shadow .5s, height .3s, width .3s, opacity .3s;
   }
 
   .click {
@@ -18,6 +15,8 @@
   }
 
   .hover {
-    width: 500px;
+    width: 1px;
+    height: 1px;
+    box-shadow: 0 0 10px 10px white;
     opacity: 0 !important;
   }
