--- a/assets/css/custom/cursor.css
+++ b/assets/css/custom/cursor.css
@@ -13,7 +13,11 @@
   opacity: 0;
   transform: translate(-50%, -50%);
   pointer-events: none;
-  transition: box-shadow 0.5s, height 0.3s, width 0.3s, opacity 0.3s;
+  transition:
+    box-shadow 0.5s,
+    height 0.3s,
+    width 0.3s,
+    opacity 0.3s;
 }
 
 .click {
