--- a/assets/css/glassmorphism.css
+++ b/assets/css/glassmorphism.css
@@ -1,19 +1,13 @@
-body {
-  display: flex;
-  background-image: url("https://images.pexels.com/photos/1616403/pexels-photo-1616403.jpeg?cs=srgb&dl=pexels-zaksheuskaya-709412-1616403.jpg&fm=jpg");
-  align-items: center;
-  justify-content: center;
-}
-
 .glass-button {
+  transition: 1s;
   color: rgba(255, 255, 255, 0.7);;
   margin: 5px;
   padding: 1rem 1.5rem;
   width: fit-content;
   height: fit-content;
   background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(18px);
-  -webkit-backdrop-filter: blur(18px);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 
@@ -56,7 +50,10 @@ body {
 }
 
 .glass-button:hover {
-  
+  backdrop-filter: blur(150px);
+  -webkit-backdrop-filter: blur(150px);
+  box-shadow: inset .15em .15em .4em rgba(0,0,0,.3),
+              inset -.15em -.15em .4em rgba(255,255,255,.2);
 }
 
 .glass-card {
@@ -66,8 +63,8 @@ body {
   width: 240px;
   height: 360px;
   background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 
