--- a/assets/css/glassmorphism.css
+++ b/assets/css/glassmorphism.css
@@ -1,3 +1,10 @@
+body {
+  display: flex;
+  background-image: url("https://images.pexels.com/photos/1616403/pexels-photo-1616403.jpeg?cs=srgb&dl=pexels-zaksheuskaya-709412-1616403.jpg&fm=jpg");
+  align-items: center;
+  justify-content: center;
+}
+
 .glass {
   width: fit-content;
   height: fit-content;
@@ -5,8 +12,8 @@
   margin: 5px;
   padding: 1rem 1.5rem;
   background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 
@@ -76,11 +83,81 @@
   padding: 1px;
 }
 
-.glass-nav > a {
+.glass-nav > button {
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.0);
   border-radius: 14px;
   width: fit-content;
   height: fit-content;
   color: rgba(255, 255, 255, 0.7);;
   margin: 5px;
   padding: 1rem 1.5rem;
+}
+
+.glass-nav > button:hover {
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  box-shadow: 
+    0 8px 32px rgba(0, 0, 0, 0.1),
+    inset 0 1px 0 rgba(255, 255, 255, 0.05),
+    inset 0 -1px 0 rgba(255, 255, 255, 0.01),
+    inset 0 0 3em .05em rgba(255, 255, 255, 0.1);
+}
+
+.glass-nav > .active {
+  transition: .5s, box-shadow .1s, background .1s;
+  background: rgba(255, 255, 255, 0);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  box-shadow: 
+    0 8px 32px rgba(0, 0, 0, 0.1),
+    inset 0 1px 0 rgba(255, 255, 255, 0.05),
+    inset 0 -1px 0 rgba(255, 255, 255, 0.01),
+    inset 0 0 3em .05em rgba(255, 255, 255, 0.1);
+  position: relative;
+  overflow: hidden;
+}
+
+.glass-nav > .active::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(255, 255, 255, 0.1),
+    transparent
+  );
+}
+
+.glass-nav > .active::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 100%;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.08),
+    transparent,
+    rgba(255, 255, 255, 0.03)
+  );
+}
+
+.glass-nav > .active:hover {
+  backdrop-filter: blur(150px);
+  -webkit-backdrop-filter: blur(150px);
+  box-shadow: inset .15em .15em .4em rgba(0,0,0,.3),
+              inset -.15em -.15em .4em rgba(255,255,255,.2);
+}
+
+.glass-nav > .active:active {
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: inset .3em .3em .8em rgba(0,0,0,.3),
+              inset -.3em -.3em .8em rgba(255,255,255,.2)
 }
