--- a/assets/css/glassmorphism.css
+++ b/assets/css/glassmorphism.css
@@ -1,10 +1,3 @@
-body {
-  display: flex;
-  background-image: url("https://images.pexels.com/photos/1616403/pexels-photo-1616403.jpeg?cs=srgb&dl=pexels-zaksheuskaya-709412-1616403.jpg&fm=jpg");
-  align-items: center;
-  justify-content: center;
-}
-
 .glass {
   width: fit-content;
   height: fit-content;
@@ -160,4 +153,10 @@ body {
   background: rgba(255, 255, 255, 0.2);
   box-shadow: inset .3em .3em .8em rgba(0,0,0,.3),
               inset -.3em -.3em .8em rgba(255,255,255,.2)
+}
+
+.glass-img {
+  padding: 0;
+  width: 500px;
+  height: auto;
 }
