--- a/assets/css/glassmorphism.css
+++ b/assets/css/glassmorphism.css
@@ -1,4 +1,5 @@
 .glass {
+  text-shadow: 0px 0px 15px black;
   width: fit-content;
   height: fit-content;
   color: rgba(255, 255, 255, 0.7);;
@@ -77,6 +78,7 @@
 }
 
 .glass-nav > button {
+  text-shadow: 0px 0px 15px black;
   background: transparent;
   border: 1px solid rgba(255, 255, 255, 0.0);
   border-radius: 14px;
@@ -159,4 +161,12 @@
   padding: 0;
   width: 500px;
   height: auto;
+}
+
+.glass-avatar {
+  object-fit: cover;
+  border-radius: 100%;
+  padding: 0;
+  width: 100px;
+  height: 100px;
 }
