--- a/assets/css/glassmorphism.css
+++ b/assets/css/glassmorphism.css
@@ -2,7 +2,7 @@
   text-shadow: 0px 0px 15px black;
   width: fit-content;
   height: fit-content;
-  color: rgba(255, 255, 255, 0.7);;
+  color: rgba(255, 255, 255, 0.7);
   margin: 5px;
   padding: 1rem 1.5rem;
   background: rgba(255, 255, 255, 0.1);
