--- a/assets/css/custom/glassmorphism.css
+++ b/assets/css/custom/glassmorphism.css
@@ -70,3 +70,25 @@ body {
       );
   overflow: hidden;
 }
+
+.move-left {
+  transform-origin: left;
+  animation: liquid-inertia 500ms ease;
+}
+
+.move-right {
+  transform-origin: right;
+  animation: liquid-inertia 500ms ease;
+}
+
+@keyframes liquid-inertia {
+  0% {
+    transform: scale(1 1);
+  }
+  50% {
+    transform: scale(1.2 1);
+  }
+  100% {
+    transform: scale(1 1);
+  }
+}
